--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,13 @@
 .App {
-  margin: 20px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.App h1 {
   text-align: center;
 }
 
-footer {
+.App footer {
   margin: 20px;
+  text-align: center;
 }
