Added some basic styling

--- a/src/styles/Dictionary.css
+++ b/src/styles/Dictionary.css
@@ -1,4 +1,24 @@
 .dictionary form {
-  text-align: center;
   margin: 20px 0px;
+  padding: 10px 40px;
+  text-align: center;
+}
+
+.dictionary input {
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+}
+
+.dictionary section {
+  margin: 20px;
+  padding: 20px;
+  background-color: rgba(109, 189, 155, 0.3);
+  border: 1px solid rgb(109, 189, 155);
+  border-radius: 6px;
+}
+
+.dictionary .app-container {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: rgb(241, 244, 245);
 }
