--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,9 +4,9 @@
 
 .header h1 {
   font-family: "Sigmar One", cursive;
-  font-size: 100px;
+  font-size: 10vw;
   display: inline-block;
-  padding: 0px 40px 10px 40px;
+  padding: 0vw 5vw 1vw 5vw;
   background-image: url("../images/dictionaryCropped.jpg");
   background-size: cover;
   background-position: left center;
