--- a/src/styles/Dictionary.css
+++ b/src/styles/Dictionary.css
@@ -1,7 +1,7 @@
 .dictionary section {
   margin: 1vw;
   padding: 1vw;
-  background-color: rgba(143, 192, 171, 0.2);
+  background-color: rgb(250, 250, 250);
   border: 1px solid rgb(216, 221, 219);
   border-radius: 6px;
 }
