--- a/src/styles/Photos.css
+++ b/src/styles/Photos.css
@@ -1,4 +1,8 @@
+.photos .conatiner-fluid {
+  padding-left: var(--bs-gutter-x, 0rem);
+}
+
 .photos .photo {
-  padding: 1vw;
-  border-radius: 1.3vw;
+  padding: 0.4vw;
+  border-radius: 1vw;
 }
