--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,10 @@
 .header {
-  text-align: center;
+  display: block;
+  margin: 0 auto;
+  width: max-content;
+  height: max-content;
+  background: #eaecec;
+  border-radius: 6px;
 }
 
 .header h1 {
@@ -7,13 +12,11 @@
   font-size: 10vw;
   display: inline-block;
   padding: 0vw 5vw 1vw 5vw;
-  background-image: url("../images/dictionaryCropped.jpg");
+  background-image: url("../images/dictionaryThree.jpg");
   background-size: cover;
   background-position: left center;
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  border: 2px solid rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2), -1px -1px 2px rgba(0, 0, 0, 0.2);
 }
