--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   width: max-content;
   height: max-content;
-  background: #eaecec;
+  background: rgb(250, 250, 250);
   border-radius: 6px;
 }
 
