--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   padding: 20px;
   background-color: rgb(250, 250, 250);
-  background-color: #fcd7c6;
+  background-color: #fde1d4;
 }
 
 .App h1 {
